--- a/gestaousuarioenderecoliven/package.json
+++ b/gestaousuarioenderecoliven/package.json
@@ -7,11 +7,14 @@
       "@types/express": "^4.17.21",
       "@types/node": "^16.11.10",
       "nodemon": "^3.1.4",
+      "swagger-autogen": "^2.23.7",
       "ts-node": "10.9.1",
       "typescript": "4.5.2"
    },
    "dependencies": {
+      "bcrypt": "^5.1.1",
       "bcryptjs": "^2.4.3",
+      "body-parser": "^1.20.2",
       "cors": "^2.8.5",
       "express": "^4.19.2",
       "gestaousuarioenderecoliven": "file:",
@@ -19,13 +22,13 @@
       "morgan": "^1.10.0",
       "pg": "^8.12.0",
       "reflect-metadata": "^0.1.13",
-      "swagger-jsdoc": "^6.2.8",
       "swagger-ui-express": "^5.0.1",
-      "typeorm": "0.3.20"
+      "typeorm": "0.3.20",
+      "validator": "^13.12.0"
    },
    "scripts": {
-      "dev": "nodemon --exec ts-node src/server.ts",
-      "start": "ts-node src/server.ts",
+      "dev": "nodemon --exec ts-node src/app.ts",
+      "start": "ts-node src/app.ts",
       "typeorm": "typeorm-ts-node-commonjs"
    }
 }
