--- a/gestaousuarioenderecoliven/package.json
+++ b/gestaousuarioenderecoliven/package.json
@@ -4,12 +4,14 @@
    "description": "Api User Address",
    "type": "commonjs",
    "devDependencies": {
+      "@types/bcrypt": "^5.0.2",
       "@types/express": "^4.17.21",
+      "@types/jsonwebtoken": "^9.0.6",
       "@types/node": "^16.11.10",
       "nodemon": "^3.1.4",
       "swagger-autogen": "^2.23.7",
-      "ts-node": "10.9.1",
-      "typescript": "4.5.2"
+      "ts-node": "^10.9.1",
+      "typescript": "^4.9.5"
    },
    "dependencies": {
       "bcrypt": "^5.1.1",
