--- a/gestaousuarioenderecoliven/package.json
+++ b/gestaousuarioenderecoliven/package.json
@@ -6,10 +6,12 @@
    "devDependencies": {
       "@types/bcrypt": "^5.0.2",
       "@types/express": "^4.17.21",
+      "@types/jest": "^29.5.12",
       "@types/jsonwebtoken": "^9.0.6",
       "@types/node": "^16.11.10",
       "nodemon": "^3.1.4",
       "swagger-autogen": "^2.23.7",
+      "ts-jest": "^29.2.5",
       "ts-node": "^10.9.1",
       "typescript": "^4.9.5"
    },
@@ -20,8 +22,8 @@
       "cors": "^2.8.5",
       "express": "^4.19.2",
       "gestaousuarioenderecoliven": "file:",
+      "jest": "^29.7.0",
       "jsonwebtoken": "^9.0.2",
-      "morgan": "^1.10.0",
       "pg": "^8.12.0",
       "reflect-metadata": "^0.1.13",
       "swagger-ui-express": "^5.0.1",
@@ -31,6 +33,7 @@
    "scripts": {
       "dev": "nodemon --exec ts-node src/app.ts",
       "start": "ts-node src/app.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "typeorm": "typeorm-ts-node-commonjs",
+      "test": "jest"
    }
 }
