--- a/gestaousuarioenderecoliven/tsconfig.json
+++ b/gestaousuarioenderecoliven/tsconfig.json
@@ -12,6 +12,9 @@
       "experimentalDecorators": true,
       "sourceMap": true,
       "resolveJsonModule": true,
-      "allowSyntheticDefaultImports": true
-   }
+      "allowSyntheticDefaultImports": true,
+      "esModuleInterop": true, 
+   },
+   "include": ["src/**/*.ts", "tests/**/*.ts"],
+   "exclude": ["node_modules"]
 }
